syntax = "proto3";

option csharp_namespace = "GrpcServiceCore";

package sum;

// The greeting service definition.
service SumCalculator {
  // Sends a greeting
  rpc sum (SumRequest) returns (SumReply){}
}

// The request message containing the user's name.
message SumRequest {
  int32 a = 1;
  int32 b=2;
}

// The response message containing the greetings.
message SumReply {
  int32 result = 1;
}